Set initial turn for gameDto in test cases.